# personal-rag-chatbot

./: .env.template  README.md  backend.Dockerfile  compose.yaml  frontend.Dockerfile  pyproject.toml  setup.py
data-example/: tennis_facts.txt
rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rag/api/v1/: main.py  schema.py
rag/backend/database/: database.py
rag/backend/models/: models.py
rag/frontend/: Home.py  utils.py
rag/frontend/pages/: Database 📮.py
