[project]
name = "rag"
version = "0.1.0"
description = "RAG with FastAPI and Streamlit"
requires-python = ">=3.11"
dependencies = [
    "torch==2.8.0",
    "transformers>=4.57.1",
    "streamlit>=1.51.0",
    "dotenv>=0.9.9",
    "psycopg2>=2.9.11",
    "pgvector>=0.4.1",
    "fastapi[standard]>=0.121.1",
    "setuptools>=80.9.0",
    "pandas>=2.3.3",
    "chardet>=5.2.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
  line-length = 120
  # pyflakes, pycodestyle, isort
  lint.select = ["F", "E", "W", "I001"]
